# snek-sploit

./: Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  msf-docker-images.yml  release.yml  test.yml
docker/: README.md  database.yml  msfconsole.rc  snek.rb
examples/: console_interaction.py  example.py  execute_module_with_output.py  module_interaction.py  run_command_in_console.py  session_interaction.py  session_listener.py  sessions.py
snek_sploit/: __init__.py
snek_sploit/lib/: auth.py  base.py  client.py  console.py  context.py  metasploit.py
snek_sploit/lib/groups/: __init__.py  auth.py  base.py  console.py  consoles.py  core.py  db.py  health.py  job.py  jobs.py  module.py  modules.py  plugin.py  plugins.py  session.py  sessions.py
snek_sploit/lib/rpc/: __init__.py  auth.py  console.py  consoles.py  core.py  db.py  health.py  job.py  jobs.py  module.py  modules.py  plugin.py  plugins.py  session.py  sessions.py
snek_sploit/util/: __init__.py  api.py  constants.py  enums.py  exceptions.py  retry.py
tests/e2e/: test.py
